syntax = "proto3";

package types;

option go_package = "github.com/cryptogateway/backend-envoys/server/types";

message Contract {
  int64 id = 1;
  int64 chain_id = 2;
  string chain_name = 3;
  string parent_symbol = 4;
  string symbol = 5;
  string address = 6;
  double fees = 7;
  int32 decimals = 8;
  string platform = 9;
  string protocol = 10;
}

message Asset {
  int64 id = 1;
  string name = 2;
  string symbol = 3;
  double balance = 4;
  double fees_trade = 5;
  double fees_discount = 6;
  double fees_charges = 7;
  double fees_costs = 8;
  double min_withdraw = 9;
  double max_withdraw = 10;
  double min_trade = 11;
  double max_trade = 12;
  double volume = 13;
  repeated Chain chains = 14;
  repeated types.Pair pairs = 15;
  repeated int64 fields = 16; // Chain ids.
  bool marker = 17;
  bool icon = 18;
  bool status = 19;
  bool exist = 20;
  string group = 21;
  string type = 22;
  string create_at = 23;
}

message Chain {
  int64 id = 1;
  string name = 2;
  string parent_symbol = 3;
  string explorer_link = 4;
  string address = 5;
  string rpc = 6;
  int64 block = 7;
  int64 network = 8;
  int64 confirmation = 9;
  int64 time_withdraw = 10;
  bool status = 11;
  bool exist = 12;
  double reserve = 13;
  double fees = 14;
  int32 decimals = 15;
  string platform = 16;
  Contract contract = 17;
  string tag = 18;
}

message Transaction {
  int64 id = 1;
  int64 chain_id = 2;
  int64 user_id = 3;
  string symbol = 4;
  string hash = 5;
  string create_at = 6;
  string to = 7;
  string from = 8;
  double value = 9;
  double fees = 10;
  double price = 11;
  int64 confirmation = 12;
  int64 block = 13;
  bool hook = 14;
  string allocation = 15;
  string group = 16;
  string platform = 17;
  string protocol = 18;
  Chain chain = 19;
  string assignment = 20;
  string status = 21;
  int64 parent = 22;
  string error = 23;
}

message Order {
  int64 id = 1;
  int64 user_id = 2;
  string base_unit = 3;
  string quote_unit = 4;
  double price = 5;
  double value = 6;
  double quantity = 7;
  double fees = 8;
  int32 count = 9;
  string create_at = 10;
  string assigning = 11;
  string trading = 12;
  string type = 13;
  string status = 14;
}

message Pair {
  int64 id = 1;
  string symbol = 2;
  string base_unit = 3;
  string quote_unit = 4;
  string icon = 5;
  double price = 6;
  double ratio = 7;
  double base_decimal = 8;
  double quote_decimal = 9;
  bool status = 10;
  bool graph_clear = 11;
  string type = 12;
}

message Ticker {
  int64 id = 1;
  int64 time = 2;
  string base_unit = 3;
  string quote_unit = 4;
  double high = 5;
  double low = 6;
  double open = 7;
  double close = 8;
  double price = 9;
  double volume = 10;
}

message Stats {
  double high = 1;
  double low = 2;
  double last = 3;
  double first = 5;
  double previous = 4;
  double volume = 6;
  int32 count = 7;
}

message Trade {
  int64 id = 1;
  int64 user_id = 2;
  string base_unit = 3;
  string quote_unit = 4;
  string create_at = 5;
  double price = 6;
  double quantity = 7;
  double fees = 8;
  bool maker = 9;
  string assigning = 10;
}

message Rules {
  repeated string default = 1;
  repeated string spot = 2;
  repeated string market = 3;
}

message Counts {
  int32 transaction = 1;
  int32 order = 2;
  int32 asset = 3;
}

message User {
  int64 id = 1;
  string name = 2;
  string email = 3;
  string create_at = 4;
  bool status = 5;
  Counts counts = 6;
  Rules rules = 7;
  repeated Action actions = 8;
  repeated string sample = 9;
  bool factor_secure = 10;
  string factor_secret = 11;
  bool kyc_secure = 12;
  string kyc_secret = 13;
}

message Action {
  int64 id = 1;
  string os = 2;
  string device = 3;
  string ip = 4;
  int64 user_id = 6;
  repeated string browser = 7;
  string create_at = 8;
}

message Advertising {
  int64 id = 1;
  string link = 2;
  string title = 3;
  string text = 4;
  string pattern = 5;
}

message Future {
  int64 id = 1;
  string position = 2;
  string order_type = 3;
  string base_unit = 4;
  string quote_unit = 5;
  double price = 6;
  double quantity = 7;
  double leverage = 8;
  double take_profit = 9;
  double stop_loss = 10;
  double fees = 11;
  string status = 12;
  string create_at = 13;
  int64 user_id = 14;
  string assigning = 15;
  string mode = 16;
  double value = 17;
}